updated topnav and fix overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,19 @@
-nav{
-    width:100%;
-    color:#00458A;
-    display:flex;
-    justify-content: space-between;
-    padding: 0px 90px 0px 90px;
-    box-shadow: 1px 1px 8px #888888;
+.content {
+    box-sizing: border-box;
 }
 
-nav div a{
-    color:#00458A;
-    text-decoration: none;
-    padding-right:20px;
-}
-
-nav div{
-    padding:1.5%;
-}
-*{
-    margin:0
-}
 
 .content-top{
     display: flex;
     justify-content: space-between;
-    padding:5%;
+    /* padding:5%; */
     padding-bottom: 5%;
     align-items: baseline;
 }
 
 .content-top div{
     width: 50%;
-    padding-right: 6%;
+    /* padding-right: 2%; */
 }
 
 .content-top div div{
@@ -46,11 +29,11 @@ nav div{
 }
 
 .content-middle{
-    padding:5%;
+    /* padding:5%; */
     display: flex;
     justify-content: space-between;
-    padding-bottom: 10%;
-    align-items: baseline;
+    /* padding-bottom: 10%; */
+    align-items: center;
     
 }
 
@@ -67,7 +50,8 @@ nav div{
     width: 100%;
     height: 100%;
     max-width:500px;
-    max-height:400px
+    max-height:400px;
+    object-fit: contain;
 }
 
 .researchFocus{
@@ -95,7 +79,10 @@ nav div{
 
 .content-bottom{
     display:flex;
-    padding: 5%;
+    /* padding: 5%; */
+}
+.bottom {
+    padding: 40px !important;
 }
 
 .content-bottom .bottom{
@@ -158,13 +145,16 @@ nav .menu{
 
 
 @media only screen and (max-width: 768px){
+    .mb-spacing {
+        padding: 0 50px  !important;
+    }
 
     .content-top{
         max-width: 768px;
         display: flex;
         flex-direction:column-reverse;
         justify-content: center;
-        padding:9%;
+        /* padding:0 30px; */
 
        
     }
@@ -186,11 +176,13 @@ nav .menu{
         max-width:680px;
         margin-bottom: 10%;
     }
-    .content-top .hero--title{
+    .content-top{
         margin-bottom:10%;
     }
     .hero--title{
-        font-size: 2.5rem;
+        /* font-size: 2.5rem; */
+        margin-top: 10px;
+        line-height: 1.5;
     }
 
     .paragraph{
@@ -201,7 +193,7 @@ nav .menu{
     
     .content-middle{
         max-width: 768px;
-        padding:9%;
+        /* padding:9%; */
         display: block;
         justify-content: center;
         padding-bottom: 10%;
@@ -314,37 +306,6 @@ nav .menu{
     }
     
 
-    nav{
-        color:#00458A;
-        justify-content: space-between;
-        padding: 10px 0px 0px 0px;
-        box-shadow: 1px 1px 8px #888888;
-        display:flex;
-        max-width: 768px;
-    }
-    nav .menu{
-        display:block;
-        font-size:2rem;
-        padding:5%;
-        color:lightblue;
-    }
-    
-    nav div a{
-        color:#00458A;
-        text-decoration: none;
-        padding:20px;
-    }
-    
-    nav div{
-        padding:10px;
-        display:none;
-    }
-
-    .head{
-        display: block;
-        font-size:2.5rem;
-    }
-
-    
+  
     
 }
